# egads

./: .gitignore  Makefile.in  README  README.libegads  aclocal.m4  byteswap.h  configure  configure.in  eg.c  eg.dsp  eg.h  egads.dsp  egads.dsw  egads.h.in  egads.sh.in  egadspriv.h  license.txt  mkinstalldirs  platform.h  popen.c  popen.h  prng.c  procout.c  procout.h  randlib-test.c  randlib.c  setup.dsp  sha1.c  sha1.h  test.dsp  umac.c  umac.h
darwin/: df.c  ps.c
doc/: spec.html  spec.txt
freebsd/: df.c  ps.c
linux/: df.c  ps.c
openbsd/: df.c  ps.c
solaris/: df.c  ps.c
unix/: .gitignore  client.c  common.c  server.c
win32/: .gitignore  client.c  eg.rc  egads.def  egads.rc  entropy.c  resource.h  server.c  setup.c  setup.rc
